Filtering events by active only
